add css style first

--- a/index.html
+++ b/index.html
@@ -3,20 +3,20 @@
   <head>
     <title>Armiya-Welcome</title>
     <meta charset="utf-utf-8">
+    <link rel="stylesheet" tyle="text/css" href="style.css">
   </head>
 
   <body>
-    <h1><a href="index.html">Armiya</a></h1>
-    <ul>
-      <li><a href="1.html">About</a></li>
-      <li><a href="2.html">Blog</a></li>
-      <li><a href="3.html">Youtube</a></li>
-    </ul>
+    <h1><a href="index.html">ARMIYA</a></h1>
+    <div class="menu">
+      <a href="1.html" class="menuitems">About</a>
+      <a href="2.html" class="menuitems">Blog</a>
+      <a href="3.html" class="menuitems">Youtube</a>
+    </div>
 
-    <h2>Welcome!</h2>
-
+    <img src="https://images.unsplash.com/photo-1605940169839-aedc047b0b06?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1001&q=80" width="100%" style="margin-top:30px">
     <p><a href="" target="blank" title="html5 specification">This is Armiya's website.</p>
-    <img src="https://images.unsplash.com/photo-1605940169839-aedc047b0b06?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1001&q=80" width="100%">
-    <p style="margin-top:40px">This is test page.</p>
+
+    <p >This is test page.</p>
   </body>
 </html>
