--- a/1.html
+++ b/1.html
@@ -3,20 +3,23 @@
   <head>
     <title>Armiya - About</title>
     <meta charset="utf-utf-8">
+    <link rel="stylesheet" tyle="text/css" href="style.css">
   </head>
 
   <body>
-    <h1><a href="index.html">Armiya</a></h1>
-    <ul>
-      <li><a href="1.html">About</a></li>
-      <li><a href="2.html">Blog</a></li>
-      <li><a href="3.html">Youtube</a></li>
-    </ul>
+    <h1><a href="index.html">ARMIYA</a></h1>
+    <div class="menu">
+      <a href="1.html" class="menuitems">About</a>
+      <a href="2.html" class="menuitems">Blog</a>
+      <a href="3.html" class="menuitems">Youtube</a>
+    </div>
 
     <h2>About</h2>
 
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam ligula sapien, rutrum sed vestibulum eget, rhoncus ac erat. Aliquam erat volutpat. Sed convallis scelerisque enim at fermentum. Aliquam consectetur, est ac auctor iaculis, odio mi bibendum leo, in congue neque velit vel enim. Nullam vitae justo at mauris sodales feugiat. Praesent pellentesque ipsum eget tellus imperdiet ultrices. Sed ultricies nisi nec diam sodales fringilla. Quisque adipiscing cursus porta. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam bibendum scelerisque elit, eu pharetra dui pulvinar eget. Nam mollis mauris id tellus ultricies at porttitor neque vulputate. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
     <img src="https://images.unsplash.com/photo-1605579695491-c9b8c98c30f0?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1000&q=80" width="100%">
-    <p style="margin-top:40px">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam ligula sapien, rutrum sed vestibulum eget, rhoncus ac erat. Aliquam erat volutpat.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam ligula sapien, rutrum sed vestibulum eget, rhoncus ac erat. Aliquam erat volutpat.</p>
+
+
   </body>
 </html>
