--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
       <a href="2.html" class="menuitems">Blog</a>
       <a href="3.html" class="menuitems">Youtube</a>
     </div>
+    <div id="block">
+        <img src="https://images.unsplash.com/photo-1605940169839-aedc047b0b06?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1001&q=80" width="100%">
 
-    <img src="https://images.unsplash.com/photo-1605940169839-aedc047b0b06?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1001&q=80" width="100%" style="margin-top:30px">
-    <p><a href="" target="blank" title="html5 specification">This is Armiya's website.</p>
-
-    <p >This is test page.</p>
+        <p><a href="" target="blank" title="html5 specification">This is test pages.</a></p>
+    </div>
   </body>
 </html>
